--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,118 @@
-@import './base.css';
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    background: #212121;
+    color: #F5F5F5;
+    font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
-}
-
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
+    margin: 2rem;
+    height: calc(100vh - 4rem);
+    width: calc(100vw - 4rem);
+    overflow: hidden;
     display: flex;
-    place-items: center;
-  }
+    flex-direction: column;
+    /*justify-content: center;*/
+    /*align-items: center;*/
+}
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+.btn {
+    color: #f8f8f2;
+    border-radius: 1rem;
+    background: rgba(89, 89, 89, 0.1);
+    padding: 1rem;
+    text-align: center;
+    text-decoration: none !important;
+}
+
+.btn.btn-black {
+    background: #f8f8f2;
+    color: #595959;
+}
+
+.text-secondary {
+    color: #75715e;
+    font-size: 0.75rem;
+}
+
+.text-field__input {
+    display: block;
+    width: calc(100% - 1.5rem - 2px);
+    height: calc(1.5rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-family: inherit;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #F5F5F5;
+    background-clip: padding-box;
+    border: 1px solid #000000;
+    border-radius: 0.5rem;
+}
+
+.text-field__input::placeholder {
+    color: #75715e;
+    opacity: 0.4;
+}
+
+.text-field__icon {
+    position: relative;
+}
+
+.text-field__icon::before {
+    content: '';
+    color: #595959;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    bottom: 0;
+    left: 0.625rem;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.text-field__icon .text-field__input {
+    padding-left: 2rem;
+    width: calc(100% - 1.5rem - 2px - 1.25rem);
+}
+
+.form_radio_btn {
+    display: inline-block;
+    flex: 1 1 100%;
+}
+
+.form_radio_btn input[type=radio] {
+    display: none;
+}
+
+.form_radio_btn label {
+    display: inline-block;
+    cursor: pointer;
+    padding: 0 1.5rem;
+    line-height: 34px;
+    border: 1px solid #000000;
+    border-radius: 6px;
+    user-select: none;
+    width: calc(100% - 3rem);
+    text-align: center;
+}
+
+.form_radio_btn input[type=radio]:checked + label {
+    background: #F5F5F5;
+    color: #595959;
+}
+
+.form_radio_btn label:hover {
+    background: #F5F5F5;
+    color: #595959;
 }
